--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -2,13 +2,14 @@
   <table border="1" style="width: 100%; border-collapse: collapse;">
     <thead>
       <tr>
-        <th class="text-warning-emphasis" colspan="4"></th>
-        <th class="text-warning-emphasis" colspan="4">TOTALS</th>
-        <th class="text-warning-emphasis" colspan="5">Common</th>
-        <th class="text-warning-emphasis" colspan="5">Rare</th>
-        <th class="text-warning-emphasis" colspan="5">Epic</th>
-        <th class="text-warning-emphasis" colspan="5">Strongholds</th>
-        <th class="text-warning-emphasis" colspan="8">Misc</th>
+        <th class="text-warning-emphasis text-center" colspan="4"></th>
+        <th class="text-warning-emphasis text-center" colspan="2">Totals</th>
+        <th class="text-black text-center" colspan="2">Valhalla EXPECTED</th>
+        <th class="text-warning-emphasis text-center" colspan="5">Common</th>
+        <th class="text-warning-emphasis text-center" colspan="5">Rare</th>
+        <th class="text-warning-emphasis text-center" colspan="5">Epic</th>
+        <th class="text-warning-emphasis text-center" colspan="5">Strongholds</th>
+        <th class="text-warning-emphasis text-center" colspan="7">Misc</th>
       </tr>
       <!-- Affichage dynamique des en-têtes avec noms personnalisés et gestion du tri -->
       <th class="text-center"></th>
@@ -42,13 +43,14 @@
       <table class="table table-bordered">
         <thead>
           <tr>
-            <th class="text-warning-emphasis" colspan="4"></th>
-            <th class="text-warning-emphasis" colspan="4">TOTALS</th>
-            <th class="text-warning-emphasis" colspan="5">Common</th>
-            <th class="text-warning-emphasis" colspan="5">Rare</th>
-            <th class="text-warning-emphasis" colspan="5">Epic</th>
-            <th class="text-warning-emphasis" colspan="5">Strongholds</th>
-            <th class="text-warning-emphasis" colspan="9">Misc</th>
+            <th class="text-warning-emphasis text-center" colspan="3"></th>
+            <th class="text-warning-emphasis text-center" colspan="2">Totals</th>
+            <th class="text-black text-center" colspan="2">Valhalla EXPECTED</th>
+            <th class="text-warning-emphasis text-center" colspan="5">Common</th>
+            <th class="text-warning-emphasis text-center" colspan="5">Rare</th>
+            <th class="text-warning-emphasis text-center" colspan="5">Epic</th>
+            <th class="text-warning-emphasis text-center" colspan="5">Strongholds</th>
+            <th class="text-warning-emphasis text-center" colspan="7">Misc</th>
           </tr>
           <tr>
             <!-- Affichage des colonnes (noms des champs) sur une seule ligne -->
