--- a/src/app/crypting/crypting.component.html
+++ b/src/app/crypting/crypting.component.html
@@ -2,9 +2,8 @@
   <div class="background-image"></div>
   <div class="content">
     <div class="d-flex justify-content-center align-items-center">
-      <button class="secondary_btn btn-link pirata-one-regular mt-4 mb-3" (click)="onHome()">{{ 'GENERAL.BACK'
-        |
-        translate }}</button>
+      <button class="secondary_btn btn-link pirata-one-regular mt-4 mb-3" (click)="onHome()">
+        {{ 'GENERAL.BACK' | translate }}</button>
     </div>
 
     <div class="d-flex flex-column flex-md-row justify-content-center align-items-center gap-2 mt-1">
@@ -12,8 +11,10 @@
         (click)="loadTable('valhalla', 'Valhalla')">Valhalla</button>
       <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
         (click)="loadTable('asgard', 'Asgard')">Asgard</button>
+      <!--<button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
+        (click)="loadTable('frontier', 'Frontier')">Frontier</button>-->
       <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
-        (click)="loadTable('frontier', 'Frontier')">Frontier</button>
+        (click)="loadTable('tpa', 'TPA')">TPA</button>
     </div>
 
 
@@ -46,8 +47,8 @@
     </div>
 
     <!-- Affichage de la date de rapport pour l'onglet sélectionné -->
-    <h4 class="text-white ms-3">{{ 'CRYPTING.PERIOD' | translate }} : {{ 'CRYPTING.FROM' | translate }} 2014-12-30 {{
-      'CRYPTING.TO' | translate }} 2015-01-05</h4>
+    <h4 class="text-white ms-3">{{ 'CRYPTING.PERIOD' | translate }} : {{ 'CRYPTING.FROM' | translate }} 2025-01-13 {{
+      'CRYPTING.TO' | translate }} 2025-01-19</h4>
     <h4 class="text-white ms-3">{{ 'DATATABLE.UPDATED' | translate }} : {{ getFormattedReportDate() }}</h4>
 
     <app-data-table [tableName]="selectedTable"></app-data-table>
