--- a/src/app/crypting/crypting.component.html
+++ b/src/app/crypting/crypting.component.html
@@ -11,8 +11,8 @@
         (click)="loadTable('valhalla', 'Valhalla')">Valhalla</button>
       <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
         (click)="loadTable('asgard', 'Asgard')">Asgard</button>
-      <!--<button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
-        (click)="loadTable('frontier', 'Frontier')">Frontier</button>-->
+      <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
+        (click)="loadTable('vinland', 'Vinland')">Vinland</button>
       <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
         (click)="loadTable('tpa', 'TPA')">TPA</button>
     </div>
