--- a/src/app/crypting/crypting.component.scss
+++ b/src/app/crypting/crypting.component.scss
@@ -3,7 +3,7 @@
 }
 
 .background-image {
-  background-image: url("/assets/images/crypt.jpg");
+  background-image: url("/assets/images/crypting.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
