--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -2,18 +2,18 @@
   <table border="1" style="width: 100%; border-collapse: collapse;">
     <thead>
       <tr>
-        <th class="text-warning-emphasis text-center" colspan="4"></th>
-        <th class="text-warning-emphasis text-center" colspan="2">Totals</th>
+        <th class="text-info-emphasis text-center" colspan="4"></th>
+        <th class="text-info-emphasis text-center" colspan="2">Totals</th>
         <th class="text-black text-center" colspan="2">Valhalla EXPECTED</th>
-        <th class="text-warning-emphasis text-center" colspan="5">Common</th>
-        <th class="text-warning-emphasis text-center" colspan="5">Rare</th>
-        <th class="text-warning-emphasis text-center" colspan="5">Epic</th>
-        <th class="text-warning-emphasis text-center" colspan="5">Strongholds</th>
-        <th class="text-warning-emphasis text-center" colspan="7">Misc</th>
+        <th class="text-info-emphasis text-center" colspan="5">Common</th>
+        <th class="text-info-emphasis text-center" colspan="5">Rare</th>
+        <th class="text-info-emphasis text-center" colspan="5">Epic</th>
+        <th class="text-info-emphasis text-center" colspan="5">Strongholds</th>
+        <th class="text-info-emphasis text-center" colspan="7">Misc</th>
       </tr>
       <!-- Affichage dynamique des en-têtes avec noms personnalisés et gestion du tri -->
       <th class="text-center"></th>
-      <th class="text-center text-warning-emphasis" *ngFor="let column of displayedColumns" (click)="sortData(column)">
+      <th class="text-center text-info-emphasis" *ngFor="let column of displayedColumns" (click)="sortData(column)">
         {{ columnHeaders[column] || column }}
         <!-- Indicateur de tri ascendant/descendant -->
         <span *ngIf="sortDirection[column]">↑</span>
@@ -43,18 +43,18 @@
       <table class="table table-bordered">
         <thead>
           <tr>
-            <th class="text-warning-emphasis text-center" colspan="3"></th>
-            <th class="text-warning-emphasis text-center" colspan="2">Totals</th>
+            <th class="text-info-emphasis text-center" colspan="3"></th>
+            <th class="text-info-emphasis text-center" colspan="2">Totals</th>
             <th class="text-black text-center" colspan="2">Valhalla EXPECTED</th>
-            <th class="text-warning-emphasis text-center" colspan="5">Common</th>
-            <th class="text-warning-emphasis text-center" colspan="5">Rare</th>
-            <th class="text-warning-emphasis text-center" colspan="5">Epic</th>
-            <th class="text-warning-emphasis text-center" colspan="5">Strongholds</th>
-            <th class="text-warning-emphasis text-center" colspan="9">Misc</th>
+            <th class="text-info-emphasis text-center" colspan="5">Common</th>
+            <th class="text-info-emphasis text-center" colspan="5">Rare</th>
+            <th class="text-info-emphasis text-center" colspan="5">Epic</th>
+            <th class="text-info-emphasis text-center" colspan="5">Strongholds</th>
+            <th class="text-info-emphasis text-center" colspan="9">Misc</th>
           </tr>
           <tr>
             <!-- Affichage des colonnes (noms des champs) sur une seule ligne -->
-            <th *ngFor="let key of displayedColumns" class="text-warning-emphasis">
+            <th *ngFor="let key of displayedColumns" class="text-info-emphasis">
               {{ columnHeaders[key] || key }}
             </th>
           </tr>
