--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="data.length > 0; else loading">
-  <table class="table table-bordered table-striped" style="width: 100%; border-collapse: collapse;">
+  <table style="width: 100%; border-collapse: collapse;">
     <thead>
       <tr>
         <th class="text-info-emphasis text-center" colspan="4"></th>
