--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -14,6 +14,7 @@
     </button>
     <button class="secondary_btn btn-link pirata-one-regular m-2" (click)="onCrypting()">{{ 'HOME.CRYPTING' | translate
       }}</button>
-    <button class="secondary_btn btn-link pirata-one-regular m-2" (click)="onResearch()">Research Costs</button>
+    <button class="secondary_btn btn-link pirata-one-regular m-2" (click)="onResearch()">{{ 'HOME.RESEARCH' | translate
+    }}</button>
   </div>
 </div>
