--- a/src/app/crypting/crypting.component.html
+++ b/src/app/crypting/crypting.component.html
@@ -10,7 +10,7 @@
       <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
         (click)="loadTable('valhalla', 'Valhalla')">Valhalla</button>
       <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
-        (click)="loadTable('asgard', 'Asgard')">Asgard</button>
+        (click)="loadTable('legacy', 'Legacy')">Legacy</button>
       <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
         (click)="loadTable('vinland', 'Vinland')">Vinland</button>
       <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
@@ -48,8 +48,8 @@
 
     <!-- Affichage de la date de rapport pour l'onglet sélectionné -->
     @if (selectedTable === 'valhalla') {
-    <h4 class="text-white ms-3">{{ 'CRYPTING.PERIOD' | translate }} : {{ 'CRYPTING.FROM' | translate }} 2025-01-28 {{
-      'CRYPTING.TO' | translate }} 2025-02-03</h4>
+    <h4 class="text-white ms-3">{{ 'CRYPTING.PERIOD' | translate }} : {{ 'CRYPTING.FROM' | translate }} 2025-02-04 {{
+      'CRYPTING.TO' | translate }} 2025-02-10</h4>
     } @else {
     <h4 class="text-white ms-3">{{ 'CRYPTING.PERIOD' | translate }} : {{ 'CRYPTING.FROM' | translate }} 2025-02-03 {{
       'CRYPTING.TO' | translate }} 2025-02-09</h4>
