--- a/src/app/notation/notation.component.html
+++ b/src/app/notation/notation.component.html
@@ -150,53 +150,53 @@
         <div class="col-md-6">
           <table class="table-bordered mx-auto">
             <tbody>
-              <tr class="bg-success-subtle">
+              <!--<tr class="bg-success-subtle">
                 <td>{{ 'NOTATION.CRYPT.COMMON' | translate }} 15</td>
                 <td class="text-end">16</td>
               </tr>
               <tr class="bg-success-subtle">
                 <td>{{ 'NOTATION.CRYPT.COMMON' | translate }} 20</td>
                 <td class="text-end">64</td>
-              </tr>
+              </tr>-->
               <tr class="bg-success-subtle">
                 <td>{{ 'NOTATION.CRYPT.COMMON' | translate }} 25</td>
-                <td class="text-end">256</td>
+                <td class="text-end">25</td>
               </tr>
-              <tr class="bg-warning-subtle">
+              <!--<tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.CRYPT.RARE' | translate }} 15</td>
                 <td class="text-end">46</td>
-              </tr>
+              </tr>-->
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.CRYPT.RARE' | translate }} 20</td>
-                <td class="text-end">128</td>
+                <td class="text-end">30</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.CRYPT.RARE' | translate }} 25</td>
-                <td class="text-end">350</td>
+                <td class="text-end">40</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.CRYPT.RARE' | translate }} 30</td>
-                <td class="text-end">1,280</td>
+                <td class="text-end">60</td>
               </tr>
-              <tr class="bg-danger-subtle">
+              <!--<tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 15</td>
                 <td class="text-end">68</td>
-              </tr>
+              </tr>-->
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 20</td>
-                <td class="text-end">192</td>
+                <td class="text-end">50</td>
               </tr>
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 25</td>
-                <td class="text-end">768</td>
+                <td class="text-end">70</td>
               </tr>
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 30</td>
-                <td class="text-end">1,500</td>
+                <td class="text-end">90</td>
               </tr>
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 35</td>
-                <td class="text-end">3,000</td>
+                <td class="text-end">125</td>
               </tr>
             </tbody>
           </table>
@@ -204,21 +204,25 @@
         <div class="col-md-6">
           <table class="table-bordered mx-auto bg-info-subtle">
             <tbody>
-              <tr class="bg-warning-subtle">
+              <!--<tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.OTHER.STRONGHOLD' | translate }} 15</td>
                 <td class="text-end">32</td>
-              </tr>
+              </tr>-->
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.OTHER.STRONGHOLD' | translate }} 20</td>
-                <td class="text-end">64</td>
+                <td class="text-end">30</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.OTHER.STRONGHOLD' | translate }} 25</td>
-                <td class="text-end">128</td>
+                <td class="text-end">50</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.OTHER.STRONGHOLD' | translate }} 30</td>
-                <td class="text-end">256</td>
+                <td class="text-end">70</td>
+              </tr>
+              <tr class="bg-danger-subtle">
+                <td>{{ 'NOTATION.OTHER.BANK' | translate }}</td>
+                <td class="text-end">125</td>
               </tr>
             </tbody>
           </table>
