--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="language-switcher d-flex justify-content-center align-items-center">
   <div>
     <form action="https://www.paypal.com/paypalme/deroonicolas" method="get" target="_blank">
-      <button type="submit" class="btn btn-outline-warning domine-400 ps-2 pe-2">Donate</button>
+      <button type="submit" class="btn btn-warning domine-400 ps-2 pe-2">Donate</button>
     </form>
   </div>
   <button class="btn p-0 m-2" (click)="changeLanguage('en')">
