frontier and notation

--- a/src/app/crypting/crypting.component.html
+++ b/src/app/crypting/crypting.component.html
@@ -13,6 +13,8 @@
         (click)="loadTable('legacy', 'Legacy')">Legacy</button>
       <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
         (click)="loadTable('vinland', 'Vinland')">Vinland</button>
+      <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
+        (click)="loadTable('frontier', 'Frontier')">Frontier</button>
       <!--<button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
         (click)="iframe()">Analytics</button>-->
     </div>
