--- a/src/app/notation/notation.component.html
+++ b/src/app/notation/notation.component.html
@@ -150,53 +150,37 @@
         <div class="col-md-6">
           <table class="table-bordered mx-auto">
             <tbody>
-              <!--<tr class="bg-success-subtle">
-                <td>{{ 'NOTATION.CRYPT.COMMON' | translate }} 15</td>
-                <td class="text-end">16</td>
-              </tr>
-              <tr class="bg-success-subtle">
-                <td>{{ 'NOTATION.CRYPT.COMMON' | translate }} 20</td>
-                <td class="text-end">64</td>
-              </tr>-->
               <tr class="bg-success-subtle">
                 <td>{{ 'NOTATION.CRYPT.COMMON' | translate }} 25</td>
-                <td class="text-end">25</td>
+                <td class="text-end">256</td>
               </tr>
-              <!--<tr class="bg-warning-subtle">
-                <td>{{ 'NOTATION.CRYPT.RARE' | translate }} 15</td>
-                <td class="text-end">46</td>
-              </tr>-->
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.CRYPT.RARE' | translate }} 20</td>
-                <td class="text-end">30</td>
+                <td class="text-end">128</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.CRYPT.RARE' | translate }} 25</td>
-                <td class="text-end">40</td>
+                <td class="text-end">350</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.CRYPT.RARE' | translate }} 30</td>
-                <td class="text-end">60</td>
+                <td class="text-end">1,280</td>
               </tr>
-              <!--<tr class="bg-danger-subtle">
-                <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 15</td>
-                <td class="text-end">68</td>
-              </tr>-->
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 20</td>
-                <td class="text-end">50</td>
+                <td class="text-end">192</td>
               </tr>
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 25</td>
-                <td class="text-end">70</td>
+                <td class="text-end">728</td>
               </tr>
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 30</td>
-                <td class="text-end">90</td>
+                <td class="text-end">1,500</td>
               </tr>
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 35</td>
-                <td class="text-end">125</td>
+                <td class="text-end">3,000</td>
               </tr>
             </tbody>
           </table>
@@ -204,25 +188,25 @@
         <div class="col-md-6">
           <table class="table-bordered mx-auto bg-info-subtle">
             <tbody>
-              <!--<tr class="bg-warning-subtle">
-                <td>{{ 'NOTATION.OTHER.STRONGHOLD' | translate }} 15</td>
-                <td class="text-end">32</td>
-              </tr>-->
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.OTHER.STRONGHOLD' | translate }} 20</td>
-                <td class="text-end">30</td>
+                <td class="text-end">64</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.OTHER.STRONGHOLD' | translate }} 25</td>
-                <td class="text-end">50</td>
+                <td class="text-end">128</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.OTHER.STRONGHOLD' | translate }} 30</td>
-                <td class="text-end">70</td>
+                <td class="text-end">256</td>
               </tr>
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.OTHER.BANK' | translate }}</td>
-                <td class="text-end">125</td>
+                <td class="text-end">128</td>
+              </tr>
+              <tr class="bg-success-subtle">
+                <td>{{ 'NOTATION.HEROIC' | translate }}</td>
+                <td class="text-end">1</td>
               </tr>
             </tbody>
           </table>
@@ -236,102 +220,132 @@
     <div class="container domine-400">
       <div class="row">
         <!-- Première table dans une colonne -->
-        <div class="col-md-6">
+        <div class="col-md-4">
           <table class="table-bordered mx-auto">
             <tbody>
               <tr class="bg-success-subtle">
                 <td>{{ 'NOTATION.CRYPT.COMMON' | translate }} 10</td>
-                <td class="text-end">35</td>
+                <td class="text-end">5</td>
               </tr>
               <tr class="bg-success-subtle">
                 <td>{{ 'NOTATION.CRYPT.COMMON' | translate }} 15</td>
-                <td class="text-end">75</td>
+                <td class="text-end">16</td>
               </tr>
               <tr class="bg-success-subtle">
                 <td>{{ 'NOTATION.CRYPT.COMMON' | translate }} 20</td>
-                <td class="text-end">167</td>
+                <td class="text-end">64</td>
               </tr>
               <tr class="bg-success-subtle">
                 <td>{{ 'NOTATION.CRYPT.COMMON' | translate }} 25</td>
-                <td class="text-end">427</td>
+                <td class="text-end">128</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.CRYPT.RARE' | translate }} 10</td>
-                <td class="text-end">66</td>
+                <td class="text-end">5</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.CRYPT.RARE' | translate }} 15</td>
-                <td class="text-end">130</td>
+                <td class="text-end">46</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.CRYPT.RARE' | translate }} 20</td>
-                <td class="text-end">319</td>
+                <td class="text-end">128</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.CRYPT.RARE' | translate }} 25</td>
-                <td class="text-end">629</td>
+                <td class="text-end">350</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.CRYPT.RARE' | translate }} 30</td>
-                <td class="text-end">1,349</td>
+                <td class="text-end">1,280</td>
               </tr>
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 15</td>
-                <td class="text-end">308</td>
+                <td class="text-end">68</td>
               </tr>
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 20</td>
-                <td class="text-end">598</td>
+                <td class="text-end">192</td>
               </tr>
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 25</td>
-                <td class="text-end">890</td>
+                <td class="text-end">768</td>
               </tr>
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 30</td>
-                <td class="text-end">1,184</td>
+                <td class="text-end">1,500</td>
               </tr>
               <tr class="bg-danger-subtle">
                 <td>{{ 'NOTATION.CRYPT.EPIC' | translate }} 35</td>
-                <td class="text-end">1,480</td>
+                <td class="text-end">3,000</td>
               </tr>
             </tbody>
           </table>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
+          <table class="table table-bordered mx-auto bg-primary-subtle">
+            <tbody>
+              <tr class="bg-light">
+                <td>{{ 'NOTATION.HEROIC' | translate }} 16</td>
+                <td class="text-end">30</td>
+              </tr>
+              <tr class="bg-light">
+                <td>{{ 'NOTATION.HEROIC' | translate }} 17</td>
+                <td class="text-end">35</td>
+              </tr>
+              <tr class="bg-light">
+                <td>{{ 'NOTATION.HEROIC' | translate }} 18</td>
+                <td class="text-end">40</td>
+              </tr>
+              <tr class="bg-light">
+                <td>{{ 'NOTATION.HEROIC' | translate }} 19</td>
+                <td class="text-end">45</td>
+              </tr>
+              <tr class="bg-light">
+                <td>{{ 'NOTATION.HEROIC' | translate }} 20</td>
+                <td class="text-end">50</td>
+              </tr>
+              <tr class="bg-light">
+                <td>...</td>
+                <td class="text-end">...</td>
+              </tr>
+              <tr class="bg-light">
+                <td>{{ 'NOTATION.HEROIC' | translate }} 43</td>
+                <td class="text-end">165</td>
+              </tr>
+              <tr class="bg-light">
+                <td>{{ 'NOTATION.HEROIC' | translate }} 44</td>
+                <td class="text-end">170</td>
+              </tr>
+              <tr class="bg-light">
+                <td>{{ 'NOTATION.HEROIC' | translate }} 45</td>
+                <td class="text-end">175</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-md-4">
           <table class="table-bordered mx-auto bg-info-subtle">
             <tbody>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.OTHER.ELVEN_STRONGHOLD' | translate }} 10</td>
-                <td class="text-end">18</td>
+                <td class="text-end">16</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.OTHER.ELVEN_STRONGHOLD' | translate }} 15</td>
-                <td class="text-end">30</td>
+                <td class="text-end">32</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.OTHER.ELVEN_STRONGHOLD' | translate }} 20</td>
-                <td class="text-end">38</td>
+                <td class="text-end">64</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.OTHER.ELVEN_STRONGHOLD' | translate }} 25</td>
-                <td class="text-end">95</td>
+                <td class="text-end">128</td>
               </tr>
               <tr class="bg-warning-subtle">
                 <td>{{ 'NOTATION.OTHER.ELVEN_STRONGHOLD' | translate }} 30</td>
-                <td class="text-end">130</td>
-              </tr>
-              <tr class="bg-danger-subtle">
-                <td>{{ 'NOTATION.OTHER.CURSED_STRONGHOLD' | translate }} 20</td>
-                <td class="text-end">38</td>
-              </tr>
-              <tr class="bg-danger-subtle">
-                <td>{{ 'NOTATION.OTHER.CURSED_STRONGHOLD' | translate }} 25</td>
-                <td class="text-end">95</td>
-              </tr>
-              <tr class="bg-danger-subtle">
-                <td>{{ 'NOTATION.OTHER.CURSED_STRONGHOLD' | translate }} 30</td>
-                <td class="text-end">130</td>
+                <td class="text-end">256</td>
               </tr>
             </tbody>
           </table>
