--- a/src/app/crypting/crypting.component.html
+++ b/src/app/crypting/crypting.component.html
@@ -7,14 +7,14 @@
     </div>
 
     <div class="d-flex flex-column flex-md-row justify-content-center align-items-center gap-2 mt-1">
-      <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
-        (click)="loadTable('valhalla', 'Valhalla')">Valhalla</button>
+      <!--<button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
+        (click)="loadTable('valhalla', 'Valhalla')">Valhalla</button>-->
       <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
         (click)="loadTable('legacy', 'Legacy')">Legacy</button>
-      <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
+      <!--<button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
         (click)="loadTable('vinland', 'Vinland')">Vinland</button>
       <button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
-        (click)="loadTable('frontier', 'Frontier')">Frontier</button>
+        (click)="loadTable('frontier', 'Frontier')">Frontier</button>-->
       <!--<button class="secondary_btn tertiary btn-link pirata-one-regular w-100 w-md-auto"
         (click)="iframe()">Analytics</button>-->
     </div>
@@ -54,8 +54,8 @@
     <h4 class="text-white ms-3">{{ 'CRYPTING.PERIOD' | translate }} : {{ 'CRYPTING.FROM' | translate }} 2025-03-18 {{
       'CRYPTING.TO' | translate }} 2025-03-24</h4>
     } @else {
-    <h4 class="text-white ms-3">{{ 'CRYPTING.PERIOD' | translate }} : {{ 'CRYPTING.FROM' | translate }} 2025-04-07 {{
-      'CRYPTING.TO' | translate }} 2025-04-13</h4>
+    <h4 class="text-white ms-3">{{ 'CRYPTING.PERIOD' | translate }} : {{ 'CRYPTING.FROM' | translate }} 2025-04-14 {{
+      'CRYPTING.TO' | translate }} 2025-04-20</h4>
     }
 
     <h4 class="text-white ms-3">{{ 'DATATABLE.UPDATED' | translate }} : {{ getFormattedReportDate() }}</h4>
